# recomendation

./: .gitignore  docker-compose.yml  flask_app.py  model.py  pyproject.toml
test_venv/: pyvenv.cfg
test_venv/Scripts/: activate  activate.bat
